# barcode-fastapi

./: poetry.toml  pyproject.toml
src/: main.py
