[tool.poetry]
name = "barcode-fastapi"
version = "0.1.0"
description = ""
authors = ["Roger Oliveira <rogerpolvr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
